--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -8,7 +8,7 @@ LDFLAGS    += -shared
 ifneq ($(STATIC), 1)
 PLUGINS    ?= initctl.so alsa-utils.so bootmisc.so dbus.so hwclock.so \
 	      resolvconf.so urandom.so x11-common.so tty.so time.so   \
-	      netlink.so
+	      netlink.so pidfile.so
 DEPS       := $(PLUGINS:.so=.d)
 endif
 
